[package]
name = "raspi_lights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
colorsys = "0.6.7"
cpal = "0.15.2"
meyda = { git = "https://github.com/meyda/meyda-rs.git" }
rosc = "0.10.1"
